feat(ui/AssociationScreen): restructure code and add contact members

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- String values for French language -->
+<?xml version="1.0" encoding="utf-8"?><!-- String values for French language -->
 <!-- example in code : val greeting = getString(R.string.greeting) -->
 <resources>
     <!-- App name and activity titles -->
@@ -51,7 +50,10 @@
     <string name="explore_search_placeholder">Recherche</string>
 
     <!-- Association Strings -->
-    <string name="association_upcoming_events" translatable="true">Evenement à venir</string>
+    <string name="association_upcoming_events">Evenement à venir</string>
+    <string name="association_go_back">Retour</string>
+    <string name="association_see_more">Voir plus</string>
+    <string name="association_contact_members">Membres à contacter</string>
 
 
 </resources>
