--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,9 @@
 
     <!-- Association Strings -->
     <string name="association_upcoming_events" translatable="true">Upcoming Events</string>
-
+    <string name="association_go_back" translatable="true">Go Back</string>
+    <string name="association_see_more" translatable="true">See More</string>
+    <string name="association_contact_members" translatable="true">Contact Members</string>
 
     <!-- Debug Strings -->
     <string name="debug_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur
