--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,13 @@
     <string name="association_go_back" translatable="true">Go Back</string>
     <string name="association_see_more" translatable="true">See More</string>
     <string name="association_contact_members" translatable="true">Contact Members</string>
+    <string name="association_help_us" translatable="true">
+        Here’s where you could help us. Click on a role to learn more.
+    </string>
+    <string name="association_follower" translatable="true">followers</string>
+    <string name="association_member" translatable="true">members</string>
+    <string name="association_follow" translatable="true">follow</string>
+    <string name="association_join" translatable="true">Join</string>
 
     <!-- Debug Strings -->
     <string name="debug_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur
