Squashed commit of the following:
commit dc82b2d62995ab570d676ef705b0ee8fb0061362
Merge: 07ac912 5b00a74
Author: Romainhir <116665594+Romainhir@users.noreply.github.com>
Date:   Thu Oct 17 14:21:10 2024 +0200

    Merge pull request #86 from SwEnt-Group13/chore/apkWorkflow

    chore(action/apk-maker): add a yml file that should make apk of the main automatically

commit 5b00a74454e2c040cb5bb05a1c676b7d6826f001
Author: Romain Hirschi <romain.hirschi@epfl.ch>
Date:   Thu Oct 17 13:14:53 2024 +0200

    fix: load the environment variable of github

commit 07ac9126e2aed6dc055afbfe1960b2f5ffe0e791
Merge: 11b2631 67ec202
Author: Arnaud Rajon <arnaud.rajon@epfl.ch>
Date:   Thu Oct 17 12:53:58 2024 +0200

    Merge pull request #72 from SwEnt-Group13/feature/link-event-list-firestore

    feature: Link Home screen and Explore screen to Firebase (including images)

commit 67ec2024ba5e8e6bb8cc3d54dc8a208b40ee4b8c
Author: Arnaud Rajon <arnaud.rajon@epfl.ch>
Date:   Thu Oct 17 12:40:46 2024 +0200

    chore: remove unwanted comment

commit 11b26314cc8fb517ac2e4b4f673bc4e2d4239f67
Merge: b5f5449 574ab2e
Author: Romainhir <116665594+Romainhir@users.noreply.github.com>
Date:   Thu Oct 17 12:11:18 2024 +0200

    Merge pull request #84 from SwEnt-Group13/chore/apkWorkflow

    chore(action/apk-maker): add a yml file that should make apk of the main automatically

commit 574ab2eeec5f975ee51dac33039a638bcee46fd4
Merge: 325f9c9 b5f5449
Author: Romain Hirschi <romain.hirschi@epfl.ch>
Date:   Thu Oct 17 11:44:21 2024 +0200

    Merge branch 'main' of github.com:SwEnt-Group13/unio into chore/apkWorkflow

commit 325f9c9d29ffbdd4aee5e9dffae3ff8e5eb9cfdd
Author: Romain Hirschi <romain.hirschi@epfl.ch>
Date:   Thu Oct 17 11:42:00 2024 +0200

    fix: fix JDK distribution

commit b5f544968afdc53c17c3f68c8c1687fdb06ae90b
Merge: 1e9cc36 d5781b0
Author: Romainhir <116665594+Romainhir@users.noreply.github.com>
Date:   Thu Oct 17 10:59:01 2024 +0200

    Merge pull request #80 from SwEnt-Group13/

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- String values for French language -->
+<?xml version="1.0" encoding="utf-8"?><!-- String values for French language -->
 <!-- example in code : val greeting = getString(R.string.greeting) -->
 <resources>
     <!-- App name and activity titles -->
@@ -49,6 +48,20 @@
 
     <!-- Explore Screen Strings -->
     <string name="explore_search_placeholder">Recherche</string>
+
+    <!-- Association Strings -->
+    <string name="association_upcoming_events">Evenement à venir</string>
+    <string name="association_go_back">Retour</string>
+    <string name="association_see_more">Voir plus</string>
+    <string name="association_contact_members">Membres à contacter</string>
+    <string name="association_help_us">
+        Voici comment vous pouvez nous aider. Cliquez sur une fonction pour en savoir plus
+    </string>
+    <string name="association_follower">abonnés</string>
+    <string name="association_member">membres</string>
+    <string name="association_follow">S\'abonner</string>
+    <string name="association_join">Rejoindre</string>
+
 
 </resources>
 
