feat(ui/AssociationProfile): display correct association title name and logo

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -62,6 +62,8 @@
     <string name="association_follow">S\'abonner</string>
     <string name="association_join">Rejoindre</string>
 
+    <string name="association_not_found">Erreur : Association introuvable</string>
+
 
 </resources>
 
