chore(i18n): Add string constants for English and French settings

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -61,6 +61,12 @@
     <string name="association_member">membres</string>
     <string name="association_follow">S\'abonner</string>
     <string name="association_join">Rejoindre</string>
+    <string name="settings_title">Réglages</string>
+    <string name="settings_theme_title">Thème</string>
+    <string name="settings_theme_content_description">Réglages de Thème</string>
+    <string name="settings_notifications_title">Notifications</string>
+    <string name="settings_notifications_summary">Activer les notifications</string>
+    <string name="settings_notifications_content_description">Réglages de Notifications</string>
 
 
 </resources>
