feat(ui/event):Add all eventDetails UI elements
Added all the composables required by the figma design.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,6 +19,8 @@
     <!-- Accessibility and Content Descriptions -->
     <string name="event_map_button_description">Ouvrir la carte pour ajouter un évènement</string>
     <string name="event_image_description">Image de l\'évènement</string>
+    <string name="event_save_button_description">Icone pour sauvegarder un évènement</string>
+    <string name="event_share_button_description">Icone pour partager un évènement</string>
 
     <!-- Event Types Strings from EventType.kt -->
     <string name="event_type_festival">Festival</string>
