--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <!-- Accessibility and Content Descriptions -->
     <string name="event_map_button_description">Open Map to Add Event</string>
     <string name="event_image_description">Event Image</string>
+    <string name="event_save_button_description">Icon for saving event</string>
+    <string name="event_share_button_description">Icon for sharing event</string>
+    <string name="event_association_icon_description" translatable="false">Icon of the event\'s organiser</string>
 
     <!-- Event Types Strings from EventType.kt -->
     <string name="event_type_festival">Festival</string>
