--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -37,7 +37,7 @@
     <string name="edit_association_title">Modifier l\'Association</string>
     <string name="name_explanation">Le nom de l\'association. Il s\'agit généralement d\'un identifiant court ou d\'un acronyme.</string>
     <string name="full_name_explanation">Le nom complet de l\'association. Il peut s\'agir du nom officiel complet.</string>
-    <string name="category_explanation">Sélectionnez la catégorie qui correspond le mieux à l\'objectif de l\'association. Choisissez une catégorie existante.</string>
+    <string name="category_explanation">Sélectionnez la catégorie qui correspond le mieux à l\'objectif de l\'association.</string>
     <string name="description_explanation">Fournissez une brève description de l\'association, y compris ses principales activités et objectifs.</string>
     <string name="image_explanation">Fournissez une URL pour l\'image de l\'association, qui sera affichée sur la page de profil.</string>
     <string name="url_explanation">Fournissez l\'URL de la page web ou de la présence en ligne de l\'association.</string>
