chore(authentication): factor out remaining hardcoded test tags
- Factored out remaining hardcoded test tags in EmailVerification and Welcome

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -13,6 +13,7 @@
     */
 
     <!-- Association Strings -->
+    <string name="association_toast_error" translatable="true">Une erreur est survenue.</string>
     <string name="association_upcoming_events">Evenement à venir</string>
     <string name="association_go_back">Retour</string>
     <string name="association_see_more">Voir plus</string>
