chore(saved): factor out hardcoded strings and test tags
- Created SavedTestTags.kt
- Factored out hardcoded test tag in Saved.kt and adjusted tests accordingly
- Factored out hardcoded string in Saved.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,6 +192,9 @@
     * package: saved
     */
 
+    <!-- Saved Screen Strings -->
+    <string name="saved_screen_title" translatable="false">Saved screen</string>
+
     /**
     * package: settings
     */
