--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -40,6 +40,7 @@
     <string name="category_explanation">Sélectionnez la catégorie qui correspond le mieux à l\'objectif de l\'association.</string>
     <string name="description_explanation">Fournissez une brève description de l\'association, y compris ses principales activités et objectifs.</string>
     <string name="url_explanation">Fournissez l\'URL de la page web ou de la présence en ligne de l\'association.</string>
+    <string name="principal_email_address_explanation">Fournissez l\'addresse email de la présidence de l\'association; ex : presidents@association.com</string>
     <string name="cancel_button_text">Annuler</string>
     <string name="save_button_text">Enregistrer</string>
     <string name="category_button_text">Sélectionner la catégorie</string>
