--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,6 +218,19 @@
     * package: user
     */
 
+    <!-- UserProfile Strings -->
+    <string name="user_profile_toast_error">An error occurred.</string>
+    <string name="user_profile_your_profile_text">Your Profile</string>
+    <string name="user_profile_content_description_more">More</string>
+    <string name="user_profile_content_description_pfp">Profile Picture</string>
+    <string name="user_profile_following_associations_text">Following</string>
+    <string name="user_profile_bottom_sheet_edit">Edit Profile</string>
+    <string name="user_profile_bottom_sheet_settings">Settings</string>
+    <string name="user_profile_bottom_sheet_sign_out">Sign Out</string>
+
+    <!-- SomeoneElseUserProfile Strings -->
+    <string name="someone_else_user_profile_screen_title" translatable="false">Someone else user profile screen</string>
+
     /**
     * Other
     */
