--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -134,6 +134,26 @@
 
     <!-- Event Creation Strings -->
     <string name="event_creation_screen">Création d\'un évènement</string>
+    <string name="event_creation_title">Crée un évènement</string>
+    <string name="event_creation_name_label">Nom de l\'évènement</string>
+    <string name="event_creation_short_description_label">Description courte</string>
+    <string name="event_creation_description_label">Description</string>
+    <string name="event_creation_coauthors_label">Associations co-organisatrices</string>
+    <string name="event_creation_tagged_label">Associations participantes</string>
+    <string name="event_creation_location_label">Localisation</string>
+    <string name="event_creation_image_label">Ajouter une bannière</string>
+    <string name="event_creation_save_button">Créer</string>
+    <string name="event_creation_cancel_button">Annuler</string>
+    <string name="event_creation_placeholder_image_description">Image temporaire</string>
+    <string name="event_creation_selected_image_description">Bannière choisie</string>
+    <string name="event_creation_dialog_ok">OK</string>
+    <string name="event_creation_dialog_cancel">Annuler</string>
+    <string name="event_creation_placeholder_time_input">HH:mm</string>
+    <string name="event_creation_placeholder_date_input">dd/MM/yy</string>
+    <string name="event_creation_startdate_label">Date de début</string>
+    <string name="event_creation_enddate_label">Date de fin</string>
+    <string name="event_creation_starttime_label">Heure de début</string>
+    <string name="event_creation_endtime_label">Heure de fin</string>
 
     /**
     * package: explore
