--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,26 @@
 
     <!-- Event Creation Strings -->
     <string name="event_creation_screen">Event creation</string>
+    <string name="event_creation_title">Create an event</string>
+    <string name="event_creation_name_label">Event Name</string>
+    <string name="event_creation_short_description_label">Short Description</string>
+    <string name="event_creation_description_label">Description</string>
+    <string name="event_creation_coauthors_label">Co-authoring Associations</string>
+    <string name="event_creation_tagged_label">Tagged Associations</string>
+    <string name="event_creation_location_label">Location</string>
+    <string name="event_creation_image_label">Add a banner</string>
+    <string name="event_creation_save_button">Create</string>
+    <string name="event_creation_cancel_button">Cancel</string>
+    <string name="event_creation_placeholder_image_description">Placeholder Image</string>
+    <string name="event_creation_selected_image_description">Selected Banner Image</string>
+    <string name="event_creation_dialog_ok">OK</string>
+    <string name="event_creation_dialog_cancel">Cancel</string>
+    <string name="event_creation_placeholder_time_input">HH:mm</string>
+    <string name="event_creation_placeholder_date_input">dd/MM/yy</string>
+    <string name="event_creation_startdate_label">Start Date</string>
+    <string name="event_creation_enddate_label">End Date</string>
+    <string name="event_creation_starttime_label">Start Time</string>
+    <string name="event_creation_endtime_label">End Time</string>
 
     <!-- Event Details Strings -->
     <string name="event_sign_up" translatable="false">I\'m going.</string>
