feat(map): add GPS location on the map screen
- Uses the map view model
- Handles behavior depending on the permissions the user has
- Display's the user's location on the map if allowed.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -164,6 +164,7 @@
     <!-- Map Screen Strings -->
     <string name="map_event_go_back_button">Retour</string>
     <string name="map_event_title">Carte d\'évènements</string>
+    <string name="map_content_description_center_on_user">Centrer sur l\'utilisateur</string>
 
     /**
     * package: saved
