--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,7 +168,7 @@
     <string name="home_content_description_map_button">Map button</string>
     <string name="home_content_description_search_icon">Search icon</string>
     <string name="home_tab_all" translatable="false">All</string>
-    <string name="home_tab_following">All</string>
+    <string name="home_tab_following" translatable="false">All</string>
 
     /**
     * package: map
